--- a/lab6/style.css
+++ b/lab6/style.css
@@ -1,161 +1,194 @@
-* {
-  box-sizing: border-box;
+body {
+  margin: 0;
+  min-width: 960px;
+  font-family: "Montserrat", "Helvetica", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 32px;
+  color: #222222;
+  background-color: #f2f4f6;
+  background-image: url("img/hero-bg.jpg");
+  background-repeat: no-repeat;
+  background-position: top center;
 }
 
 .container {
-  width: 600px;
+  max-width: 928px;
   margin: 0 auto;
-}
-
-.page {
-  display: flex;
-  flex-direction: column;
-  min-width: 640px;
-  min-height: 100vh;
-  margin: 0;
-  font-family: "Verdana", "Tahoma", sans-serif;
-  font-size: 15px;
-  line-height: 20px;
-  color: #777777;
-  background-color: #eae9f2;
-}
-
-.section-title {
-  width: 100%;
-  margin: 0;
-  margin-bottom: 20px;
-  padding: 0;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 24px;
-}
-
-a {
-  color: #6653d7;
-}
-
-a:focus {
-  outline-color: #b7aaff;
+  padding: 0 16px;
 }
 
 .page-header {
-  margin-bottom: 40px;
-  color: #777777;
-  background-color: #ffffff;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+  margin: 0 0 160px;
+  padding: 32px 0 32px;
 }
 
-.page-header .container {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-image: url("img/raccoons.svg");
-  background-repeat: no-repeat;
-  background-position: bottom right;
-  background-size: 300px 212px;
+.page-header .container,
+.page-footer .container {
+  max-width: 1408px;
+  text-align: right;
 }
 
 .page-header a {
-  font-size: 16px;
-  line-height: 24px;
+  margin-left: 56px;
+  color: #288be6;
+  text-decoration: none;
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
-.page-title {
+.header-email {
+  padding-left: 30px;
+  background-image: url("img/icon-email-header.svg");
+}
+
+.header-phone {
+  padding-left: 25px;
+  background-image: url("img/icon-phone-header.svg");
+}
+
+.hero-image {
+  margin-bottom: 620px;
+}
+
+.hero-image .container {
+  max-width: 1408px;
+  text-align: center;
+}
+
+.heading {
+  margin: 0 0 16px;
+  font-family: "Old Standard TT", "Times", "Times New Roman", serif;
+  font-size: 88px;
+  line-height: 96px;
+  font-weight: 400;
+}
+
+.hero-image p {
   margin: 0;
-  margin-bottom: 4px;
+  font-size: 32px;
+  line-height: 48px;
+}
+
+.intro {
+  margin: 0 0 120px;
+}
+
+.subheading {
+  margin: 0 0 56px;
+  font-family: "Old Standard TT", "Times", "Times New Roman", serif;
+  font-size: 64px;
+  line-height: 80px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.user-image {
+  margin: 0 0 32px;
+  text-align: center;
+}
+
+.intro h3,
+.portfolio h3 {
+  margin: 0 0 12px;
+  font-size: 28px;
+  line-height: 40px;
+  font-weight: 500;
+}
+
+.intro p {
+  margin: 0 0 32px;
+}
+
+.skills-list {
+  margin: 0;
   padding: 0;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 50px;
 }
 
-.about {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-bottom: 32px;
- }
-
-.about-image {
-   width: 147px;
-   height: 147px;
-   border-radius: 50%;
- }
-
-.about-content {
-   width: 410px;
-   font-size: 14px;
-   line-height: 24px;
- }
-
-.about-content p {
-   margin: 0;
-   margin-bottom: 12px;
-   padding: 0;
- }
-
-.status {
-  margin-bottom: 32px;
-}
-
-.status p {
-  margin: 0;
-  padding-top: 12px;
-  padding-right: 32px;
-  padding-bottom: 16px;
+.skills-list dt {
   padding-left: 32px;
-  border-radius: 32px 0;
-  font-size: 16px;
-  line-height: 24px;
-  font-style: italic;
-  color: #777777;
-  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
-.contacts {
-  margin-bottom: 82px;
+.skill-html {
+  background-image: url("img/icon-html.svg");
 }
 
-.contacts img {
-  width: 146px;
-  height: 146px;
-  margin-right: 24px;
+.skill-css {
+  background-image: url("img/icon-css.svg");
 }
 
-.contacts p {
-  margin: 0;
-  margin-bottom: 12px;
+.level {
+  margin: 4px 0 16px;
   padding: 0;
-  font-size: 14px;
-  line-height: 24px;
+  height: 14px;
+  font-size: 0;
+  background-color: #ffffff;
+  border: 1px solid #86c3fa;
+  border-radius: 8px;
 }
 
-p.contacts-name {
-  margin-top: 20px;
-  margin-bottom: 16px;
-  font-weight: bold;
-  line-height: 20px;
+.level div {
+  margin: 1px;
+  height: 12px;
+  background-color: #288be6;
+  border-radius: 6px;
 }
 
-.contacts a {
-  font-size: 16px;
-  line-height: 24px;
+.portfolio {
+  margin: 0 0 120px;
+}
+
+.projects {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.projects li {
+  margin: 0 0 80px;
+}
+
+.project-image {
+  margin: 0 0 24px;
+  text-align: center;
+}
+
+.projects p {
+  margin: 0 0 24px;
+}
+
+.button {
+  padding: 6px 20px;
+  display: inline-block;
+  vertical-align: baseline;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-radius: 4px;
+  background-color: #288be6;
+  color: #ffffff;
 }
 
 .page-footer {
-  margin-top: auto;
+  padding: 40px 0;
+  background-color: #00417d;
   color: #ffffff;
-  background-color: #6653d4;
 }
 
-.page-footer .container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding-top: 12px;
-  padding-bottom: 14px;
+.page-footer a {
+  margin-left: 56px;
+  color: inherit;
+  text-decoration: none;
+  background-repeat: no-repeat;
+  background-position: left;
 }
 
-.page-footer p {
-  margin: 0;
-  padding: 0;
+.footer-email {
+  padding-left: 30px;
+  background-image: url("img/icon-email-footer.svg");
+}
+
+.footer-phone {
+  padding-left: 25px;
+  background-image: url("img/icon-phone-footer.svg");
 }
